<resources>
    <string name="app_name">MedTrack</string>
    <string name="med">Med</string>
    <string name="track">Track</string>
    <string name="slogan1">Never miss a dose.</string>
    <string name="slogan2">MedTrack keeps your health on time.</string>
    <string name="log_in">Log In</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="hello">Hello!</string>
    <string name="new_account">New Account</string>
    <string name="go_to_register">Don\'t have an account?</string>
    <string name="go_to_login">Already have an account?</string>
    <string name="sign_up_link">&#32;Sign Up</string>
    <string name="log_in_link">&#32;Log In</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="account_type">I\'m a...</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="dummy_actual_date">Today is May 20, 2025.</string>
    <string name="tabbar_calendar">Calendar</string>
    <string name="tabbar_home">Home</string>
    <string name="tabbar_messages">Messages</string>
    <string name="todays_treatment">Today\'s Treatment</string>
    <string name="your_patients">Your patients</string>
    <string name="calendar">Calendar</string>
    <string name="chats">Chats</string>
    <string name="profile_page_title">Profile</string>
    <string name="profile">Profile</string>
    <string name="patient_name_1">Patient Name 1</string>
    <string name="disease">Disease</string>
    <string name="patient_name_2">Patient Name 2</string>
    <string name="patient_name_1_s_treatment">Patient Name 1\'s Treatment</string>
    <string name="medicament_1">Medicament 1</string>
    <string name="dose_500mg">Dose: 500mg</string>
    <string name="medicament_2">Medicament 2</string>
    <string name="dose_250mg">Dose: 250mg</string>
    <string name="_08_00">08:00</string>
    <string name="_14_30">14:30</string>
    <string name="write_a_message">Write a message...</string>
    <string name="medication_name">Medication Name</string>
    <string name="add_treatment">Add treatment</string>
    <string name="dose">Dose</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save_profile">Save Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="specialty">Specialty</string>
    <string name="cancel">Cancel</string>
</resources>