<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/list_small_dist"
            android:text="@string/app_name"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/h2_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/form_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_blue"
            android:orientation="vertical"
            android:padding="@dimen/list_small_dist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/greeting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_blue"
                android:text="@string/hello"
                android:textSize="@dimen/h2_size" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_blue"
                android:textSize="@dimen/regular_text_size"
                android:text="@string/dummy_actual_date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_small_dist"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="7">

                <LinearLayout
                    android:id="@+id/day_container_monday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_tuesday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="21"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_wednesday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="21"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_thursday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_friday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_saturday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_container_sunday"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/day_container_height"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/day_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/day_number_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/day_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_size" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/treatments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todays_treatment"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/accent_blue"
                android:paddingTop="12dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/treatments_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:layout_marginBottom="74dp"
                android:paddingTop="12dp"
                />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>